# FLARE

examples/: .gitignore  CIFAR_image_detection.h  CMakeLists.txt
examples/CIFAR_image_detection/: CIFAR_image_detection.h  CMakeLists.txt  README.md  main.cpp
flare/layers/: conv2d.ipp  dense.ipp  embedding.ipp
